# mfi920_sw

./: .gitignore  .gitmodules  README.md  afi910_example_startup.sh  build.sh  execute_afi910_sw.sh  git_subtree_add_deepstream.sh
axx910_main/src/: CMakeLists.txt  main.cpp  main_argument.cpp  main_argument.h  main_cfg.h
axx910_main/src/common/: bts.c  bts.h  bts_log.c  bts_log.h  bts_log_cfg.h  krs_base_return.h  krs_basetype.h  krs_macro.c  krs_macro.h
axx910_main/src/config_file/: sys_param_sidxdidx_configinfo.json
axx910_main/src/daq/: reshape.cu  reshape.cuh
axx910_main/src/daq/dmdriver-src/: VERSION.txt
axx910_main/src/daq/dmdriver-src/driver/: drv_indent.py  makefile
axx910_main/src/daq/dmdriver-src/driver/examples/: Makefile  README.md  adar690x_DCCMRAM_bin.cpp  adar690x_DCCMRAM_bin.h  adar690x_ICCMRAM_bin.cpp  adar690x_ICCMRAM_bin.h  application.h  bts_afi910.cpp  bts_afi910_burst_loop.cpp  bts_afi910_init.cpp  bts_afi910_rfic_dma.cpp  bts_application.h  capture.c  dummy_hal.cpp  dummy_platform.cpp  example_burst_loop.cpp  example_dma_ramp.cpp  example_init.cpp  example_main.cpp  example_syscal.cpp  example_tasklist.cpp  f2decl  f2decl.c  host_dev.cu  jetsonGPIO.cpp  platform.h  run.sh  spi_optimized.h  tasklist_util.cpp  tasklist_util.h
axx910_main/src/daq/dmdriver-src/driver/include/: adar690x_fw.h  adi_dmdriver.h  adi_dmhal.h  adi_pmic_driver.h  host_dev.h  jetsonGPIO.h
axx910_main/src/daq/dmdriver-src/driver/src/: ADAR690x.h  adar690x_regs.h  afe.c  basic_op.c  calc_ramp.c  callfw.c  dataport_lvds.c  dataport_mipi.c  decode_bpid.c  fini.c  init.c  localdefs.h  lockconfig.c  pd_measure.c  (+32 more)
axx910_main/src/device/: device_ctrl.cpp  device_ctrl.h  device_ctrl_cfg.h
axx910_main/src/device/camera/: CMakeLists.txt  camera.cpp  camera.h  camera_device_cfg.h  cv_bbox_draw.hpp
axx910_main/src/device/can_drv/: can_drv_cfg.h  can_drv_types.h  can_sig.c  can_sig.h  can_sig_cfg.h
axx910_main/src/device/gps/: gps.h  gps_device_cfg.h
axx910_main/src/device/imu/: imu.c  imu.h  imu_device_cfg.h
axx910_main/src/device/radar/: radar.cpp  radar.h  radar_device_cfg.h
axx910_main/src/filesystem/linux/: linux_fs.c  linux_fs.h  linux_fs_app.c  linux_fs_app.h  linux_fs_app_cfg.h
axx910_main/src/inference/: inference.cpp  inference.h  inference_cfg.h
axx910_main/src/inference/anchor/: 20210324-bdd100k-yolov5s-640.json  20210521-bdd100k-yolov5s-1280.json
axx910_main/src/lane_detection/: .gitignore  lane_detection.sln
axx910_main/src/lane_detection/lane_detection/: CMakeLists.txt  camera_calibration.cpp  camera_calibration.h  lane_data_output.h  lane_detect.cpp  lane_detect.h  lane_detection.vcxproj  lane_detection.vcxproj.filters  lane_mapping.cpp  lane_mapping.h  main.cpp  polynomialfit.h  preprocess.cpp  preprocess.h
axx910_main/src/lib/: bts_md5.c  bts_md5.h  bts_queue.c  bts_queue.h  crc16.c  crc16.h  krs_base64.c  krs_base64.h  krs_clist.c  krs_clist.h  krs_fifo.c  krs_fifo.h  krs_frozen.c  krs_frozen.h  krs_lib.h  krs_serialescape.c  krs_serialescape.h  linked_queue.c  linked_queue.h  uncached_memory.c
axx910_main/src/lib/frozen/: frozen.c  frozen.h  unit_test.c
axx910_main/src/lib/json/: jWrite.c  jWrite.h
axx910_main/src/lib/simclist/: simclist.c  simclist.h
axx910_main/src/logging/: hdf5_ctrl.cpp  hdf5_ctrl.h  stdafx.h
axx910_main/src/logging/HDF5_Lib/include/: H5Epubgen.h  H5pubconf.h
axx910_main/src/net/: network.c  network.h  network_cfg.h
axx910_main/src/net/app/: app.c  app.h  app_cfg.h
axx910_main/src/net/app/bts_comm/: bts_comm.c  bts_comm.h  bts_comm_appl.c  bts_comm_appl.h  bts_comm_applcmd.c  bts_comm_applcmd.h  bts_comm_applcmd_callback.c  bts_comm_applcmd_callback.h  bts_comm_callback.c  bts_comm_callback.h  bts_comm_cfg.h  bts_comm_cmd.h  bts_comm_odt.c  bts_comm_odt.h  bts_comm_packet.c  bts_comm_packet.h  bts_comm_service.c  bts_comm_service.h  bts_comm_status.c  bts_comm_status.h
axx910_main/src/net/if/: if.c  if.h  if_cfg.h
axx910_main/src/net/if/can/: can.c  can.h  can_cfg.h
axx910_main/src/net/if/eth/: eth.c  eth.h  eth_cfg.h  eth_datatype.h  eth_linuxsock.c  eth_linuxsock.h  eth_linuxsock_cfg.h
axx910_main/src/os/: os.c  os.h  os_cfg.h
axx910_main/src/rsp/: rsp_main.cpp  rsp_main.h
axx910_main/src/sys/: sys_build_defs.h  sys_config.h  sys_def.h  sys_swversion.h  system.c  system.h  system_cfg.h
axx910_main/src/sys/sys_config/: sys_config_fcw_atec.h  sys_config_fcw_vn.h  sys_config_fi.h  sys_config_its.h  sys_config_lm.h  sys_config_marine.h  sys_config_vf.h
axx910_main/src/sys/sys_param/: sys_param.c  sys_param.h  sys_param_cfg.h  sys_param_jsontype.c  sys_param_jsontype.h  sys_param_jsontype_bts24mx.c
axx910_main/src/sys/sys_param/sys_param_bts24mx/: sys_param_sid0did0_system_base.h  sys_param_sid0did10_eol.h  sys_param_sid0did11_rspinstall.h  sys_param_sid0did12_rsm.h  sys_param_sid0did13_rsptracking.h  sys_param_sid0did1_datetime.h  sys_param_sid0did200_299_app_packet.h  sys_param_sid0did2_security.h  sys_param_sid0did30_39_rfictx.h  sys_param_sid0did3_network.h  sys_param_sid0did40_49_rficrx.h  sys_param_sid0did4_infra.h  sys_param_sid0did4_systeminfo.h  sys_param_sid0did50_59_rficpll.h  sys_param_sid0did5_serialnumber.h  sys_param_sid0did60_69_rfmadc.h  sys_param_sid0did6_location.h  sys_param_sid0did7_jctbox.h  sys_param_sid0did8_rs485_protocol.h  sys_param_sid0did9_camera.h  sys_param_sid10_fcw.h  sys_param_sid6did0_9_can_hkmc1g.h  sys_param_sid6did0_9_can_hkmc2g.h  sys_param_sid6did0_9_can_j1939.h  sys_param_sid6did0_9_can_mitsubishi.h  sys_param_sid7did0_filesystem.h  sys_param_sid8_its.h  sys_param_sid9_vf.h
axx910_main/src/thread/: cam_thread.cpp  cam_thread.h  cam_thread_cfg.h  can_thread.cpp  can_thread.h  can_thread_cfg.h  daq_thread.cpp  daq_thread.h  daq_thread_cfg.h  inf_thread.cpp  inf_thread.h  inf_thread_cfg.h  net_thread.cpp  net_thread.h  net_thread_cfg.h  rsp_thread.cpp  rsp_thread.h  rsp_thread_cfg.h  thread_manager.cpp  thread_manager.h  thread_manager_cfg.h  trk_thread.cpp  trk_thread.h  trk_thread_cfg.h
axx910_main/src/time/: timestamp.cpp  timestamp.h  timestamp_cfg.h
(+428 files in other folders)
